// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browserslist target ["and_chr 80"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["and_ff 68"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["and_qq 10.4"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": false,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["and_uc 12.12"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["android 4"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["android 4.1"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["android 4.4.3-4.4.4"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["android 81"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["baidu 7.12"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["bb 10"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["chrome 80","node 12.19.0"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": null,
  "const": true,
  "destructuring": true,
  "document": null,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": null,
  "forOf": true,
  "global": null,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": null,
  "nodeBuiltins": null,
  "nwjs": false,
  "require": null,
  "web": null,
  "webworker": false,
}
`;

exports[`browserslist target ["chrome 80"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["edge 79"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["firefox 68"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["firefox 80","chrome 80"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["ie 11"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["ie_mob 11"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["ios_saf 12.0-12.1"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["kaios 2.5"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["node 0.10.0"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": false,
  "const": false,
  "destructuring": false,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": false,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 0.12.0"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": false,
  "const": false,
  "destructuring": false,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 10.0.0"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": false,
  "const": true,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 10.17.0"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": false,
  "const": true,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 12.19.0"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": false,
  "const": true,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["op_mini all"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["op_mob 54"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["opera 54"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari 10"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": true,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari 11"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari 12.0"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari 12.1"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari 13"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["safari TP"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["samsung 4"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["samsung 9.2"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["samsung 11.1-11.2"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["unknown 50"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;
